sample-app-master/server/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sample-app
    labels:
        app: sample-app
    annotations:
        kubernetes.io/tls-acme: 'true'
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
    tls:
        - hosts:
              - sample-app.dev.connectwork.fr
          secretName: cli.sample-app-crt
    rules:
        - host: sample-app.dev.connectwork.fr
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sample-app-http
                            port:
                                number: 80
